--- a/.gitattributes
+++ b/.gitattributes
@@ -1,13 +1,15 @@
 # Set default behaviour to automatically normalize line endings.
 * text=lf
-
-# Force batch scripts to always use CRLF line endings so that if a repo is accessed
-# in Windows via a file share from Linux, the scripts will work.
-*.{cmd,[cC][mM][dD]} text eol=crlf
-*.{bat,[bB][aA][tT]} text eol=crlf
-
-# Force bash scripts to always use LF line endings so that if a repo is accessed
-# in Unix via a file share from Windows, the scripts will work.
 *.sh text eol=lf
-
+* text eol=f
 *.sol linguist-language=Solidity
+
+   
+/.yarn/releases/** binary
+/.yarn/plugins/** binary
+git-hash export-subst
+security.txt ident
+LAST_COMMIT export-subst
+date*.txt filter=dater
+CODENOTIFY linguist-language=CODEOWNERS
+dpack lockable
