--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.DS_Store
+
 artifacts/
 build/
 cache/
@@ -16,3 +18,6 @@ yarn-error.log
 .certora_config/*
 .certora_*.json
 types
+
+*.tar.gz
+*.zip
