--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,20 @@
 {
   "compilerOptions": {
-    "target": "es2018",
-    "module": "commonjs",
-    "strict": true,
-    "esModuleInterop": true,
-    "outDir": "dist",
-    "resolveJsonModule": true,
-    "noImplicitAny": false
+        "declaration": true,
+        "forceConsistentCasingInFileNames": true,
+        "lib": ["es2018"],
+        "module": "commonjs",
+        "noEmitOnError": true,
+        "noFallthroughCasesInSwitch": true,
+        "noImplicitReturns": true,
+        "pretty": true,
+        "sourceMap": true,
+        "strict": true,
+        "target": "es2018",
+        "rootDir": ".",
+        "outDir": "build",
+        "esModuleInterop": true,
+        "resolveJsonModule": true
   },
   "include": [
     "./deploy",
@@ -15,5 +23,6 @@
     "./test",
     "./types",
     "./hardhat.config.ts",
-  ]
+  ],
+"exclude": ["node_modules"]
 }
